Más cambios: imagen y actualización de html

--- a/index.html
+++ b/index.html
@@ -4,11 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="estilos.css">
+    <link rel="stylesheet" href="css/estilos.css">
     <title>Clase de Gitt</title>
 </head>
 <body>
     <h1>Aprendiendo GitHub</h1>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus ipsam eos ut in perferendis possimus! Tempore aut dolorem corrupti culpa dicta id ea omnis nihil repellat dolorum perferendis, ducimus quam.</p>
+    <h2>Soy otro parrafo</h2>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe natus assumenda quasi! Optio, officia. Aliquid quidem dolor odio excepturi inventore laborum soluta officia eligendi mollitia dolore, quos quisquam repudiandae. Nostrum.</p>
+    <img src="imgs/foto body mind spirit.jpg" alt="">
 </body>
 </html>
